--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,7 +3,10 @@ name: Testing
 on:
   push:
     branches:
-      - main
+    - main
+  pull_request:
+    branches:
+    - main
 
 env:
   CARGO_TERM_COLOR: always
