--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,9 @@ authors = ["Pennsieve <https://github.com/Pennsieve/pennsieve-rust>"]
 publish = false
 edition = "2018"
 
+[features]
+mocks = []
+
 [dependencies]
 base64-url = "1.4.9"
 chrono = { version = "^0.4", features = ["serde"] }
